<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.onboarding.WelcomeFragment">

    <data>
        <import type="com.udacity.shoestore.utils.Converter" />

        <variable
            name="shoeItem"
            type="com.udacity.shoestore.data.models.Shoe" />
    </data>

    <!-- In this case, ConstraintLayout was chosen as main ViewGroup for positioning
         because of screen complexity. There are buttons under the ScrollView that
         the ScrollView should not overlap.
         -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shoe_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/fragment_vertical_margin"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- LinearLayout in this case because it's needed to place views one by one
                 in the vertical orientation without any constraints from ConstraintLayout.
                 Also, it will be easier to modify the content of the layout if a new similar
                 view will be added (eg. Price field).
                 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/ItemDetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_name_label" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name_hint"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:text="@={shoeItem.name}"
                    android:textColor="@color/colorPrimaryDark" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/ItemDetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_label" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/company_hint"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:text="@={shoeItem.company}"
                    android:textColor="@color/colorPrimaryDark" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/ItemDetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_size_label" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/size_hint"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:text="@={Converter.sizeToString(shoeItem.size)}"
                    android:textColor="@color/colorPrimaryDark" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/ItemDetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_label" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/description_hint"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:text="@={shoeItem.description}"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            style="@style/ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:layout_marginBottom="@dimen/fragment_vertical_margin"
            android:text="@string/save"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginBottom="@dimen/fragment_vertical_margin"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancel"
            android:textColor="@color/colorBtnText"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
